@@ -7,6 +7,8 @@ $Source$
 
 2003-11-18 Michal Cihar  <nijel@users.sourceforge.net>
     * read_dump.php3: Show result of last SHOW query when multiple queries.
+    * scripts/create-release.sh: Generate also sizes of files, for
+      files.inc.php on homepage.
     
 2003-11-17 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/french: update
